# AutoView8-electron34

.github/workflows/: build-electron34-v8dasm.yml  build-v8dasm.yml
configs/: electron34-args.gn  v8-versions.json
samples/: .gitignore  README.md  main-index.jsc  preload-index.jsc
scripts/v8dasm-builders/: build-windows-electron34.cmd  build-windows.cmd  build_windows_electron34.py
scripts/v8dasm-builders/patch-utils/: apply-patch-13_2.py
