target_os = "win"
target_cpu = "x64"
is_component_build = false
is_debug = false
use_custom_libcxx = false
v8_monolithic = true
v8_static_library = true
v8_enable_disassembler = true
v8_enable_object_print = true
v8_use_external_startup_data = false
dcheck_always_on = false
symbol_level = 0
is_clang = true
v8_enable_pointer_compression = true
v8_enable_sandbox = true
v8_wasm_random_fuzzers = false
v8_enable_fuzztest = false
v8_promise_internal_field_count = 1
v8_embedder_string = "-electron.0"
v8_enable_snapshot_native_code_counters = false
v8_enable_javascript_promise_hooks = true
v8_enable_private_mapping_fork_optimization = true
v8_expose_public_symbols = true
extra_cflags = [ "/D_SILENCE_ALL_CXX20_DEPRECATION_WARNINGS" ]
